# multiagent-council

./: .env.example  .exhausted_models.txt  .gitignore  LICENSE  MCP_SETUP.md  README.md  benchmark_results.md  cli.py  deploy.sh  docker-compose.yml  opencode.json  plan.md  pyproject.toml  run_mcp.sh
.github/workflows/: deploy.yml
.opencode/: session-memory.md
backend/: Dockerfile  config.py  main.py  mcp_server.py  requirements-web.txt  requirements.txt
backend/agents/: __init__.py  architecture_agent.py  artist_agent.py  base_agent.py  generalist_agent.py  historian_agent.py  performance_agent.py  philosopher_agent.py  psychologist_agent.py  quality_agent.py  scientist_agent.py  security_agent.py  strategist_agent.py  technologist_agent.py  ux_agent.py  vision_agent.py
backend/benchmark/: generalist_agent.py  report.py
backend/council/: __init__.py  budget.py  orchestrator.py  protocol.py  synthesizer.py
backend/llm/: __init__.py  provider.py
backend/memory/: __init__.py  consolidator.py  episodic_memory.py  semantic_memory.py  working_memory.py
backend/models/: __init__.py  db.py  schemas.py
benchmark_samples/: ambiguous_code.py  benchmark_report.md  cmd_injection.py  csrf_missing.py  ground_truth_extended.py  hardcoded_secrets.py  insecure_deserialize.py  path_traversal.py  run_benchmark.py  sqli_app.py  xss_app.py
docs/: alibaba-cloud-deployment.md  architecture.md  available-models.md  blog-post-draft.md  devto-post.md  generate_diagram.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
(+56 files in other folders)
