[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "multiagent-council"
version = "1.0.0"
description = "Multi-Agent Society for code review and analysis — 6 agents, 15 sub-agents, 3 debate rounds"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "openai>=1.44.0",
    "pydantic-settings>=2.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
multiagent-council = "backend.mcp_server:main"

[tool.setuptools.packages.find]
include = ["backend*"]
